--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,9 @@
 body {
-  min-height: 500px;
+  min-height: 700px;
   height: 100%;
+}
+canvas {
+  width: 800px;
+  height: 400px;
+  border: 1px solid black;
 }
